<resources>
    <string name="app_name">CartaoVisitas</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="name">Nome</string>
    <string name="new_card">Novo Cartão</string>
    <string name="new_card_image">new card image</string>
    <string name="button_add">Botao de adicionar</string>
    <string name="phone">Telefone</string>
    <string name="Color">Cor</string>
    <string name="label_show_sucess">Cartão cadastrado com sucesso</string>
    <string name="e_mail">E-mail</string>
    <string name="enterprise">Empresa</string>
    <string name="confirm">Confirmar</string>
</resources>